# haplo

./: .gitignore  Cargo.toml  Makefile  generate_onnx_model.py  haplo_configuration.toml  infer_parameters_from_phase_amplitudes.py  main.f90  ml4a_configuration.toml  nicer_example.py  nicer_experiment_infer.py  nicer_experiment_train.py  nicer_model.py  nicer_phase_amplitudes_to_parameters_models.py  nicer_phase_amplitudes_to_parameters_train.py  parameter_means.npy  parameter_standard_deviations.npy  parameters_template.csv  phase_amplitudes_template.csv  pyproject.toml  readme.md  requirements.txt  residual_light_curve_network_block.py  residual_model.py  setup.cfg  simple_dataset_analysis.py
.dvc/: config
GammaPackage/: GammaSkymapDataset.py  Gamma_Normalization.py  cura_2D_model.py  efficient_cura_2D_model.py  example_inference_gamma_newprior.py  full_vs_efficient_light_curve_comparison.py  full_vs_efficient_result_comparison.py  full_vs_efficient_slicing_speed.py  full_vs_efficient_speed_comparison.py  pbs_train_Gamma_L11.sh  selective_theta_compute_cura_2D_model.py  train_Gamma_L11.py  two_dimension_slicing_speed.py
haplo/: data_paths.py  data_preparation.py  losses.py  models.py  nicer_dataset.py  nicer_parameters_to_phase_amplitudes_infer.py  nicer_parameters_to_phase_amplitudes_train.py
ml4a/: compare_csv_files.py  download_model_states.py  infer.py  infer_and_plot_for_first_several_examples.py  infer_from_parameters_to_phase_amplitudes.py  infer_from_phase_amplitudes_to_parameters.py  infer_to_csv.py  inference.rs  lib.rs  losses.py  nicer_example.py  (+10 more)
(+89 files in other folders)
