[metadata]
name = ml4a
version = 0.1.0
author = Greg Olmschenk
author_email = greg@olmschenk.com
url = https://github.com/golmschenk/ml4a

[options]
packages = ml4a
python_requires = >=3.8
install_requires =
    tabulate >=0.8
    dvc[gs] >=2.6
    tensorflow >=2.6
    appdirs >=1.4
    matplotlib >=3.4
    pandas >=1.3
    numpy >=1.19.2, <1.20
    seaborn >=0.11
    bokeh >=2.3.3
